JumpScript/tests/baselines/reference/YieldExpression5_es6.errors.txt
tests/cases/conformance/es6/yieldExpressions/YieldExpression5_es6.jump(3,1): error TS1109: Expression expected.


==== tests/cases/conformance/es6/yieldExpressions/YieldExpression5_es6.jump (1 errors) ====
    function* foo() {
      yield*
    }
    ~
!!! error TS1109: Expression expected.